--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^18.6.4",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "bootstrap-switch-button-react": "^1.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-bootstrap-multiselect": "^2.4.1",
