--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "bootstrap-switch-button-react": "^1.2.0",
+    "lodash": "^4.17.21",
     "mdb-react-ui-kit": "^4.2.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-autosuggest": "^10.1.0",
     "react-bootstrap": "^2.4.0",
     "react-bootstrap-multiselect": "^2.4.1",
     "react-dom": "^18.2.0",
