--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.4.0",
     "react-star-rating-input": "^8.0.1",
+    "slate-react": "^0.88.0",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
